--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,29 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-:root{
-    --bg-black-900:#f2f2fc;
-    --bg-black-100:#fdf9ff;
-    --bg-black-50:#e8dfec;
-    --test-black-900:#302e4d;
-    --test-black-700:#504e70;
+:root {
+    --bg-black-900: #f2f2fc;
+    --bg-black-100: #fdf9ff;
+    --bg-black-50: #e8dfec;
+    --test-black-900: #302e4d;
+    --test-black-700: #504e70;
 }
 
-.body.dark{
-        --bg-black-900:#151515;
-        --bg-black-100:#222222;
-        --bg-black-50:#393939;
-        --test-black-900:#ffffff;
-        --test-black-700:#e9e9e9;
+.body.dark {
+    --bg-black-900: #151515;
+    --bg-black-100: #222222;
+    --bg-black-50: #393939;
+    --test-black-900: #ffffff;
+    --test-black-700: #e9e9e9;
 }
 
-.body{
+.body {
 
     line-height: 1.5;
     font-size: 16px;
     font-family: 'Poppins' sans-serif;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     outline: none;
@@ -32,60 +31,61 @@
     box-sizing: border-box;
 }
 
-::before,::after{
+::before,
+::after {
     box-sizing: border-box;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-.section{
+.section {
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
     padding: 0 30px;
-    opacity: 1; 
+    opacity: 1;
 }
 
-.hidden{
-    display: none ;
+.hidden {
+    display: none;
 }
 
-.main-content{
+.main-content {
     padding-left: 270px;
 }
 
-.padd-15{
+.padd-15 {
     padding-left: 15px;
     padding-right: 15px;
 }
- 
-.container{
+
+.container {
     max-width: 1100px;
     width: 100%;
     margin: auto;
 }
 
-.section .container{
+.section .container {
     padding-top: 60px;
     padding-bottom: 70px;
 }
 
-.section-title{
+.section-title {
     flex: 0 0 100%;
-    max-width: 100%; 
+    max-width: 100%;
     margin-bottom: 60px;
 }
 
-.section-title h2{
+.section-title h2 {
     font-size: 40px;
     color: var(--test-black-900);
     font-weight: 700;
     position: relative;
 }
 
-.section-title h2::before{
+.section-title h2::before {
     content: '';
     height: 4px;
     width: 50px;
@@ -95,7 +95,7 @@ ul{
     left: 0;
 }
 
-.section-title h2::after{
+.section-title h2::after {
     content: '';
     height: 4px;
     width: 25px;
@@ -106,7 +106,7 @@ ul{
     margin-top: 8px;
 }
 
-.row{
+.row {
     display: flex;
     flex-wrap: wrap;
     margin-left: -15px;
@@ -114,7 +114,7 @@ ul{
     position: relative;
 }
 
-.btn{
+.btn {
     font-size: 16px;
     font-weight: 500;
     padding: 12px 35px;
@@ -127,16 +127,16 @@ ul{
     transition: all 0.3s ease;
 }
 
-.btn:hover{
+.btn:hover {
     transform: scale(1.05);
 }
 
-.shadow-dark{
+.shadow-dark {
     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
 /*aside*/
-.aside{
+.aside {
     width: 270px;
     background: var(--bg-black-100);
     position: fixed;
@@ -151,14 +151,14 @@ ul{
     z-index: 10;
 }
 
-.aside .logo{
+.aside .logo {
     position: absolute;
     top: 50px;
     font-size: 30px;
     text-transform: capitalize;
 }
 
-.aside .logo a{
+.aside .logo a {
     color: var(--test-black-900);
     font-weight: 700;
     padding: 15px 20px;
@@ -167,12 +167,12 @@ ul{
     position: relative;
 }
 
-.aside .logo a span{
-    font-family: 'Clicker Script' , cursive;
+.aside .logo a span {
+    font-family: 'Clicker Script', cursive;
     font-size: 40px;
 }
 
-.aside .logo a ::before{
+.aside .logo a ::before {
     content: '';
     position: absolute;
     width: 20px;
@@ -180,10 +180,10 @@ ul{
     border-bottom: 5px solid var(--skin-color);
     border-left: 5px solid var(--skin-color);
     bottom: 0;
-    left: 0;    
+    left: 0;
 }
 
-.aside .logo a ::after{
+.aside .logo a ::after {
     content: '';
     position: absolute;
     width: 20px;
@@ -191,10 +191,10 @@ ul{
     border-top: 5px solid var(--skin-color);
     border-right: 5px solid var(--skin-color);
     top: 0;
-    right: 0;    
+    right: 0;
 }
 
-.aside .nav-toggler{
+.aside .nav-toggler {
     height: 40px;
     width: 45px;
     border: 1px solid var(--bg-black-50);
@@ -209,7 +209,7 @@ ul{
     justify-content: center;
 }
 
-.aside .nav-toggler span{
+.aside .nav-toggler span {
     height: 2px;
     width: 18px;
     background: var(--skin-color);
@@ -217,7 +217,7 @@ ul{
     position: relative;
 }
 
-.aside .nav-toggler span::before{
+.aside .nav-toggler span::before {
     content: '';
     height: 2px;
     width: 18px;
@@ -227,7 +227,7 @@ ul{
     left: 0;
 }
 
-.aside .nav-toggler span::after{
+.aside .nav-toggler span::after {
     content: '';
     height: 2px;
     width: 18px;
@@ -237,81 +237,81 @@ ul{
     left: 0;
 }
 
-.aside .nav{
+.aside .nav {
     margin-top: 50px;
 }
 
-.aside .nav li{
+.aside .nav li {
     margin-bottom: 20px;
     display: block;
 }
 
-.aside .nav li a{
+.aside .nav li a {
     font-size: 16px;
     font-weight: 600;
     display: block;
     border-bottom: 1px solid var(--bg-black-50);
-    color:var(--test-black-900);
+    color: var(--test-black-900);
     padding: 5px 15px;
 }
 
-.aside .nav li a:hover{
+.aside .nav li a:hover {
     color: var(--skin-color)
 }
 
-.aside .nav li a i{
+.aside .nav li a i {
     margin-right: 15px;
 }
 
 /*home*/
 
-.home{
+.home {
     min-width: 100vh;
     display: flex;
     color: var(--test-black-900);
 }
 
-.home .home-info{
+.home .home-info {
     flex: 0 0 60%;
     max-width: 60%;
 }
 
-h3.hello{
+h3.hello {
     font-size: 28px;
     margin: 15px 0;
 }
 
-h3.hello span{
+h3.hello span {
     font-family: 'Clicker Script' cursive;
     font-size: 30px;
     font-weight: 700;
     color: var(--skin-color);
 }
 
-h3.my-profession{
+h3.my-profession {
     font-size: 30px;
     margin: 15px 0;
 }
 
-.typing{
+.typing {
     color: var(--skin-color);
 }
 
-.home-info p{
+.home-info p {
     margin-bottom: 70px;
     font-size: 20px;
     color: var(--test-black-900);
 }
 
-.home .home-img{
+.home .home-img {
     flex: 0 0 40%;
     max-width: 40%;
     text-align: center;
     position: relative;
-  
+
 }
 
-.home-img::after{
+.home-img::after {
     content: '';
     position: absolute;
     height: 80px;
@@ -322,7 +322,7 @@ h3.my-profession{
     bottom: -20px;
 }
 
-.home-img::before{
+.home-img::before {
     content: '';
     position: absolute;
     height: 80px;
@@ -331,9 +331,9 @@ h3.my-profession{
     border-left: 10px solid var(--skin-color);
     left: -20px;
     top: -20px;
-}    
+}
 
-.home .home-img img{
+.home .home-img img {
     margin: auto;
     border-radius: 5px;
     height: 400px;
@@ -341,45 +341,46 @@ h3.my-profession{
 
 /*About*/
 
-.about .about-content{
+.about .about-content {
     flex: 0 0 100%;
     max-width: 100%;
 }
 
-.about .about-content .about-text{
+.about .about-content .about-text {
     flex: 0 0 100%;
     max-width: 100%;
 }
-.about .about-content .about-text h3{
+
+.about .about-content .about-text h3 {
     font-size: 24px;
     margin-bottom: 15px;
     font-weight: 700;
     color: var(--test-black-900);
 }
 
-.about .about-content .about-text h3 span{
+.about .about-content .about-text h3 span {
     color: var(--skin-color);
 }
 
-.about .about-content .about-text p{
+.about .about-content .about-text p {
     font-size: 16px;
     line-height: 25px;
-    color:var(--test-black-700);
+    color: var(--test-black-700);
 }
 
-.about .about-content .personal-info{
+.about .about-content .personal-info {
     flex: 0 0 60%;
     max-width: 60%;
     margin-top: 40px;
 }
 
-.about .about-content .personal-info .info-item{
+.about .about-content .personal-info .info-item {
     text-decoration: none;
     flex: 0 0 50%;
     max-width: 50%;
 }
 
-.about .about-content .personal-info .info-item p{
+.about .about-content .personal-info .info-item p {
     font-weight: 600;
     padding: 10px 0;
     font-size: 16px;
@@ -388,33 +389,38 @@ h3.my-profession{
 }
 
 
-.about .about-content .personal-info .info-item p span{
+.about .about-content .personal-info .info-item p span {
     font-weight: 400;
     color: var(--test-black-700);
     margin-left: 4px;
     display: inline-block;
 }
 
-.about .about-content .personal-info .buttons{
+.about .about-content .personal-info .info-item a:visited{
+    color: var(--test-black-700);
+}
+
+.about .about-content .personal-info .buttons {
     margin-top: 50px;
 }
 
-.about .about-content .personal-info .buttons .btn{
+.about .about-content .personal-info .buttons .btn {
     margin-right: 15px;
     margin-top: 10px;
 }
 
-.about .about-content .skills{
+.about .about-content .skills {
     flex: 0 0 40%;
     max-width: 40%;
     margin-top: 40px;
 }
-.about .about-content .skills .skill-item{
+
+.about .about-content .skills .skill-item {
     flex: 0 0 100%;
     max-width: 100%;
 }
 
-.about .about-content .skills .skill-item h5{
+.about .about-content .skills .skill-item h5 {
     line-height: 40px;
     font-weight: 600;
     font-size: 16px;
@@ -422,7 +428,7 @@ h3.my-profession{
     text-transform: capitalize;
 }
 
-.about .about-content .skills .skill-item .progress{
+.about .about-content .skills .skill-item .progress {
     background-color: var(--bg-black-50);
     height: 7px;
     border-radius: 4px;
@@ -434,7 +440,7 @@ h3.my-profession{
     margin-bottom: 25px;
 }
 
-.about .about-content .skills .skill-item .progress .progress-in{
+.about .about-content .skills .skill-item .progress .progress-in {
     position: absolute;
     left: 0;
     top: 0;
@@ -443,7 +449,7 @@ h3.my-profession{
     background-color: var(--skin-color);
 }
 
-.about .about-content .skills .skill-item .skill-percent{
+.about .about-content .skills .skill-item .skill-percent {
     position: absolute;
     right: 0;
     color: var(--test-black-900);
@@ -453,25 +459,25 @@ h3.my-profession{
 }
 
 .about .about-content .education,
-.about .about-content .experience{
+.about .about-content .experience {
     flex: 0 0 50%;
     max-width: 50%;
     margin-top: 30px;
-}    
+}
 
-.about .about-content h3.title{
+.about .about-content h3.title {
     font-size: 24px;
     margin-bottom: 30px;
     font-weight: 30px;
     color: var(--test-black-900);
 }
 
-.about .about-content .timeline-box{
+.about .about-content .timeline-box {
     flex: 0 0 100%;
     max-width: 100%;
 }
 
-.about .about-content .timeline{
+.about .about-content .timeline {
     background-color: var(--bg-black-100);
     padding: 30px 15px;
     border: 1px solid var(--bg-black-50);
@@ -480,17 +486,17 @@ h3.my-profession{
     position: relative;
 }
 
-.about .about-content .timeline .timeline-item{
+.about .about-content .timeline .timeline-item {
     position: relative;
     padding-left: 37px;
     padding-bottom: 50px;
 }
 
-.about .about-content .timeline .timeline-item:last-child{
+.about .about-content .timeline .timeline-item:last-child {
     padding-bottom: 0;
 }
 
-.about .about-content .timeline .timeline-item::before{
+.about .about-content .timeline .timeline-item::before {
     content: '';
     width: 1px;
     position: absolute;
@@ -500,7 +506,7 @@ h3.my-profession{
     background-color: var(--skin-color);
 }
 
-.about .about-content .timeline .circle-dot{
+.about .about-content .timeline .circle-dot {
     position: absolute;
     left: 0;
     top: 0;
@@ -510,18 +516,18 @@ h3.my-profession{
     background-color: var(--skin-color);
 }
 
-.about .about-content .timeline .timeline-date{
+.about .about-content .timeline .timeline-date {
     font-weight: 400;
     font-size: 14px;
     margin-bottom: 12px;
     color: var(--test-black-700);
 }
 
-.about .about-content .timeline .timeline-date .fa{
+.about .about-content .timeline .timeline-date .fa {
     margin-right: 5px;
 }
 
-.about .about-content .timeline .timeline-title{
+.about .about-content .timeline .timeline-title {
     font-weight: 700;
     font-size: 18px;
     margin-bottom: 15px;
@@ -529,7 +535,7 @@ h3.my-profession{
     color: var(--test-black-900);
 }
 
-.about .about-content .timeline .timeline-text{
+.about .about-content .timeline .timeline-text {
     line-height: 25px;
     font-size: 16px;
     text-align: justify;
@@ -538,67 +544,69 @@ h3.my-profession{
 
 /*Services*/
 
-.service .service-item{
+.service .service-item {
     padding-bottom: 40px;
 }
 
-.service .service-item{
+.service .service-item {
     margin-bottom: 30px;
     flex: 0 0 33.33%;
-    max-width: 0 0 33.33%;;
+    max-width: 0 0 33.33%;
+    ;
 }
 
-.service .service-item .service-item-inner{
+.service .service-item .service-item-inner {
     background-color: var(--bg-black-100);
     border: 1px solid var(--bg-black-50);
     border-radius: 10px;
     padding: 30px 15px;
     text-align: center;
-    transition:  all 0.35 ease;
+    transition: all 0.35 ease;
 }
-.service .service-item .service-item-inner:hover{
+
+.service .service-item .service-item-inner:hover {
     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
-.service .service-item .service-item-inner .icon{
+.service .service-item .service-item-inner .icon {
     height: 60px;
     width: 60px;
     border-radius: 50%;
     display: block;
-    margin:  0 auto 30px;
+    margin: 0 auto 30px;
     text-align: center;
     transition: all 0.3 ease;
 }
 
-.service .service-item .service-item-inner .icon .fa-brands{
+.service .service-item .service-item-inner .icon .fa-brands {
     font-size: 40px;
     line-height: 60px;
     color: var(--skin-color);
     transition: all 0.3 ease;
 }
 
-.service .service-item .service-item-inner .icon .fa-solid{
+.service .service-item .service-item-inner .icon .fa-solid {
     font-size: 40px;
     line-height: 60px;
     color: var(--skin-color);
     transition: all 0.3 ease;
 }
 
-.service .service-item .service-item-inner:hover .icon{
+.service .service-item .service-item-inner:hover .icon {
     background: var(--skin-color);
 }
 
-.service .service-item .service-item-inner:hover .icon .fa-brands{
+.service .service-item .service-item-inner:hover .icon .fa-brands {
     font-size: 25px;
     color: #ffffff;
 }
 
-.service .service-item .service-item-inner:hover .icon .fa-solid{
+.service .service-item .service-item-inner:hover .icon .fa-solid {
     font-size: 25px;
     color: #ffffff;
 }
 
-.service .service-item .service-item-inner h4{
+.service .service-item .service-item-inner h4 {
     font-size: 18px;
     margin-bottom: 15px;
     color: var(--test-black-900);
@@ -606,79 +614,79 @@ h3.my-profession{
     text-transform: capitalize;
 }
 
-.service .service-item .service-item-inner p{
+.service .service-item .service-item-inner p {
     font-size: 16px;
     color: var(--test-black-700);
     line-height: 25px;
 }
 
 /*portfólio*/
-.portfolio .container{
+.portfolio .container {
     padding-bottom: 40px;
 }
 
-.portfolio .portfolio-heading{
-    flex:  0 0 100%;
+.portfolio .portfolio-heading {
+    flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 40px;
 }
 
-.portfolio .portfolio-heading h2{
+.portfolio .portfolio-heading h2 {
     color: var(--test-black-900);
     font-weight: 500;
 }
 
-.portfolio .portfolio-item{
+.portfolio .portfolio-item {
     flex: 0 0 33.33%;
     max-width: 33.33%;
     margin-bottom: 30px;
 }
 
-.portfolio .portfolio-item-inner{
+.portfolio .portfolio-item-inner {
     border: 6px solid var(--bg-black-100);
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
 }
 
-.portfolio .portfolio-item-inner .portfolio-img img{
+.portfolio .portfolio-item-inner .portfolio-img img {
     width: 100%;
     display: block;
 }
 
 /*contact*/
 
-.contact-title{
+.contact-title {
     color: var(--skin-color);
     text-align: center;
     font-size: 25px;
     margin-bottom: 20px;
 }
 
-.contact-sub-title{
+.contact-sub-title {
     color: var(--test-black-900);
     text-align: center;
     font-size: 15px;
     margin-bottom: 60px;
 }
 
-.contact .contact-info-item{
+.contact .contact-info-item {
     flex: 0 0 25%;
     max-width: 25%;
     text-align: center;
     margin-bottom: 60px;
 }
 
-.contact .contact-info-item .icon{
+.contact .contact-info-item .icon {
     display: inline-block;
 }
 
-.contact .contact-info-item .icon .fa{
+.contact .contact-info-item .icon .fa {
     font-size: 25px;
     color: var(--skin-color);
 }
 
-.contact .contact-info-item h4{
+.contact .contact-info-item h4 {
     font-size: 18px;
     font-weight: 700;
     color: var(--test-black-900);
@@ -686,33 +694,33 @@ h3.my-profession{
     margin: 15px 0 5px;
 }
 
-.contact .contact-info-item p{
+.contact .contact-info-item p {
     font-size: 16px;
     line-height: 25px;
     color: var(--test-black-700);
-    font-weight: 400;  
+    font-weight: 400;
 }
 
-.contact .contact-form{
+.contact .contact-form {
     flex: 0 0 100%;
     max-width: 100%;
 }
 
-.contact .contact-form .col-6{
+.contact .contact-form .col-6 {
     flex: 0 0 50%;
     max-width: 50%;
 }
 
-.contact .contact-form .col-12{
+.contact .contact-form .col-12 {
     flex: 0 0 100%;
     max-width: 100%;
 }
 
-.contact .contact-form .form-item{
+.contact .contact-form .form-item {
     margin-bottom: 30px;
 }
 
-.contact .contact-form .form-item .form-control{
+.contact .contact-form .form-item .form-control {
     width: 100%;
     height: 50px;
     border-radius: 25px;
@@ -724,85 +732,64 @@ h3.my-profession{
     transition: all 0.3s ease;
 }
 
-.contact .contact-form .form-item .form-control:focus{
+.contact .contact-form .form-item .form-control:focus {
     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
-.contact .contact-form .form-item textarea .form-control{
+.contact .contact-form .form-item textarea .form-control {
     height: 140px;
 }
 
-.contact .contact-form .btn{
+.contact .contact-form .btn {
     height: 50px;
     padding: 0 50px;
 }
 
-@media(max-width:1199px)
-{
-    .aside{
-       left: -270px;
+@media(max-width:1199px) {
+    .aside {
+        left: -270px;
     }
 
-    .main-content{
-       padding-left: 0;
+    .main-content {
+        padding-left: 0;
     }
 
-    .about .about-content .personal-info .info-item p span{
+    .about .about-content .personal-info .info-item p span {
         display: block;
         margin-left: 0;
     }
 }
 
-@media(max-width:991px)
-{
+@media(max-width:991px) {
+
     .contact .contact-info-item,
-    .portfolio .portfolio-item
-    .service .service-item{
+    .portfolio .portfolio-item .service .service-item {
         flex: 0 0 50%;
         max-width: 50%;
     }
 
-    .home .home-info{
+    .home .home-info {
         flex: 0 0 100%;
         max-width: 100%;
     }
-        
-    .home .home-img{
+
+    .home .home-img {
         display: none;
     }
 }
 
-@media(max-width:767px)
-{
+@media(max-width:767px) {
+
     .contact .contact-form .col-6,
     .contact .contact-info-item,
     .portfolio .portfolio-item,
     .service .service-item,
-    .service .service-item ,
+    .service .service-item,
     .about .about-content .experience,
     .about .about-content .education,
     .about .about-content .skills,
-    .about .about-content .personal-info{
+    .about .about-content .personal-info {
         flex: 0 0 100%;
         max-width: 100%;
     }
 }
-
-
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
